{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 25,
  "lineage": "14fe7427-5f8b-9b1f-9efb-1ebe6572cdd0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-0d54965788f52188a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d54965788f52188a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Course": "From Zero to Certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Sanzhar Urazaliyev"
            },
            "vpc_id": "vpc-003bd3f15181589dc"
          },
          "dependencies": [
            "data.aws_availability_zones.working"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:subnet/subnet-04041070d99c307d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-04041070d99c307d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376027645952",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Course": "From Zero to Certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Sanzhar Urazaliyev"
            },
            "vpc_id": "vpc-003bd3f15181589dc"
          },
          "dependencies": [
            "data.aws_availability_zones.working"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:vpc/vpc-003bd3f15181589dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-08c842581277faddf",
            "default_route_table_id": "rtb-0a28a1bd9b192a641",
            "default_security_group_id": "sg-0ccb54fc30ec79b31",
            "dhcp_options_id": "dopt-06728da8acc64dd99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-003bd3f15181589dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a28a1bd9b192a641",
            "owner_id": "376027645952",
            "tags_all": {
              "Course": "From Zero to Certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Sanzhar Urazaliyev"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:376027645952:loadbalancer/app/WebServer-HighlyAvailable-ALB/0c60f68fe4ca701b",
            "arn_suffix": "app/WebServer-HighlyAvailable-ALB/0c60f68fe4ca701b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "WebServer-HighlyAvailable-ALB-1270325252.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:376027645952:loadbalancer/app/WebServer-HighlyAvailable-ALB/0c60f68fe4ca701b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "WebServer-HighlyAvailable-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-067e2f82736fe8f5e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04041070d99c307d2"
              },
              {
                "subnet_id": "subnet-0d54965788f52188a"
              }
            ],
            "subnets": [
              "subnet-04041070d99c307d2",
              "subnet-0d54965788f52188a"
            ],
            "tags_all": {
              "Course": "From Zero to Certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Sanzhar Urazaliyev"
            },
            "vpc_id": "vpc-003bd3f15181589dc",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_default_vpc.default",
            "aws_security_group.web",
            "data.aws_availability_zones.working"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:376027645952:listener/app/WebServer-HighlyAvailable-ALB/0c60f68fe4ca701b/e90614be64e4c480",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:376027645952:targetgroup/WebServer-Highly-Available-TG/9554cf50f0dc78e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:376027645952:listener/app/WebServer-HighlyAvailable-ALB/0c60f68fe4ca701b/e90614be64e4c480",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:376027645952:loadbalancer/app/WebServer-HighlyAvailable-ALB/0c60f68fe4ca701b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Course": "From Zero to Certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Sanzhar Urazaliyev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_default_vpc.default",
            "aws_lb.web",
            "aws_lb_target_group.web",
            "aws_security_group.web",
            "data.aws_availability_zones.working"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:376027645952:targetgroup/WebServer-Highly-Available-TG/9554cf50f0dc78e4",
            "arn_suffix": "targetgroup/WebServer-Highly-Available-TG/9554cf50f0dc78e4",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:376027645952:targetgroup/WebServer-Highly-Available-TG/9554cf50f0dc78e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "WebServer-Highly-Available-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Course": "From Zero to Certified Professional",
              "CreatedBy": "Terraform",
              "Owner": "Sanzhar Urazaliyev"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-003bd3f15181589dc"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:376027645952:security-group/sg-067e2f82736fe8f5e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067e2f82736fe8f5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web Security Group",
            "name_prefix": "",
            "owner_id": "376027645952",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Security Group"
            },
            "tags_all": {
              "Course": "From Zero to Certified Professional",
              "CreatedBy": "Terraform",
              "Name": "Web Security Group",
              "Owner": "Sanzhar Urazaliyev"
            },
            "timeouts": null,
            "vpc_id": "vpc-003bd3f15181589dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}